Supplier partially done!

--- a/Inventory.BLL/Inventory.BLL.csproj
+++ b/Inventory.BLL/Inventory.BLL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="BusinessLogic\CustomerBLL.cs" />
     <Compile Include="BusinessLogic\ProductBLL.cs" />
+    <Compile Include="BusinessLogic\SupplierBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
