--- a/Inventory.DLL/Inventory.DLL.csproj
+++ b/Inventory.DLL/Inventory.DLL.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\Supplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerDLL.cs" />
     <Compile Include="Repositories\ProductDLL.cs" />
+    <Compile Include="Repositories\SupplierDLL.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
