--- a/Inventory.UI/Inventory.UI.csproj
+++ b/Inventory.UI/Inventory.UI.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCategories.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCategories.Designer.cs">
+      <DependentUpon>frmCategories.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +81,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmCategories.resx">
+      <DependentUpon>frmCategories.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCustomer.resx">
       <DependentUpon>frmCustomer.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,10 +102,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Inventory.DLL.Entities.Categories.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Customer.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Product.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Product1.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Supplier.datasource" />
+    <None Include="Properties\DataSources\Inventory.DLL.Repositories.CategoriesDLL.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
