--- a/Inventory.DLL/Inventory.DLL.csproj
+++ b/Inventory.DLL/Inventory.DLL.csproj
@@ -42,11 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Categories.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\Supplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CategoriesDLL.cs" />
     <Compile Include="Repositories\CustomerDLL.cs" />
     <Compile Include="Repositories\ProductDLL.cs" />
     <Compile Include="Repositories\SupplierDLL.cs" />
