--- a/Inventory.BLL/Inventory.BLL.csproj
+++ b/Inventory.BLL/Inventory.BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BusinessLogic\CategoriesBLL.cs" />
     <Compile Include="BusinessLogic\CustomerBLL.cs" />
     <Compile Include="BusinessLogic\ProductBLL.cs" />
+    <Compile Include="BusinessLogic\RegionBLL.cs" />
     <Compile Include="BusinessLogic\SupplierBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
