--- a/Inventory.UI/Inventory.UI.csproj
+++ b/Inventory.UI/Inventory.UI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmProduct.Designer.cs">
       <DependentUpon>frmProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmRegion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegion.Designer.cs">
+      <DependentUpon>frmRegion.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSupplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     <EmbeddedResource Include="frmProduct.resx">
       <DependentUpon>frmProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmRegion.resx">
+      <DependentUpon>frmRegion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSupplier.resx">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +124,7 @@
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Customer.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Product.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Product1.datasource" />
+    <None Include="Properties\DataSources\Inventory.DLL.Entities.Region.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Supplier.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Repositories.CategoriesDLL.datasource" />
     <None Include="Properties\Settings.settings">
