--- a/Inventory.DLL/Inventory.DLL.csproj
+++ b/Inventory.DLL/Inventory.DLL.csproj
@@ -48,12 +48,14 @@
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\Region.cs" />
     <Compile Include="Entities\Supplier.cs" />
+    <Compile Include="Entities\Territory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoriesDLL.cs" />
     <Compile Include="Repositories\CustomerDLL.cs" />
     <Compile Include="Repositories\ProductDLL.cs" />
     <Compile Include="Repositories\RegionDLL.cs" />
     <Compile Include="Repositories\SupplierDLL.cs" />
+    <Compile Include="Repositories\TerritoryDLL.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
