--- a/Inventory.UI/Inventory.UI.csproj
+++ b/Inventory.UI/Inventory.UI.csproj
@@ -82,6 +82,12 @@
     <Compile Include="frmSupplier.Designer.cs">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTerritory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTerritory.Designer.cs">
+      <DependentUpon>frmTerritory.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     <EmbeddedResource Include="frmSupplier.resx">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTerritory.resx">
+      <DependentUpon>frmTerritory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -126,7 +135,10 @@
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Product1.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Region.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Entities.Supplier.datasource" />
+    <None Include="Properties\DataSources\Inventory.DLL.Entities.Territory.datasource" />
     <None Include="Properties\DataSources\Inventory.DLL.Repositories.CategoriesDLL.datasource" />
+    <None Include="Properties\DataSources\Inventory.DLL.Repositories.RegionDLL.datasource" />
+    <None Include="Properties\DataSources\Inventory.DLL.Repositories.TerritoryDLL.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
