--- a/Inventory.BLL/Inventory.BLL.csproj
+++ b/Inventory.BLL/Inventory.BLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BusinessLogic\CustomerBLL.cs" />
     <Compile Include="BusinessLogic\ProductBLL.cs" />
     <Compile Include="BusinessLogic\RegionBLL.cs" />
+    <Compile Include="BusinessLogic\ShipperBLL.cs" />
     <Compile Include="BusinessLogic\SupplierBLL.cs" />
     <Compile Include="BusinessLogic\TerritoryBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
